# tick-server

./: .envrc  .gitignore  Taskfile.yml  environment,.yml  environment.yml  pyproject.toml  settings-remote.yaml  settings.yaml
app/: __init__.py  __main__.py  config.py  example-settings.toml  settings.yaml
app/api/: auth.py  models.py  server.py
app/api/routers/: rest.py
app/api/views/: privacy.tpl
app/botyo/: client.py  models.py
app/cli/: __main__.py
app/core/: __init__.py  app.py  events.py  otp.py  thread.py  time.py
app/lametric/: __init__.py  client.py  display.py  models.py
app/lametric/display/: __init__.py
app/lametric/items/: clock.py  livescore.py  weather.py
app/lametric/widgets/: __init__.py  base.py  clock.py  dateticker.py  livescore.py  rm.py  sure.py  termo.py  weather.py  yanko.py
app/lametric/widgets/items/: subscriptions.py
app/scheduler/: __init__.py
app/yanko/: __init__.py
app/znayko/: __init__.py  client.py  message.py  models.py
