[tool.poetry]
name = "lametric"
version = "0.1.0"
description = ""
authors = ["cacko <alex@cacko.net>"]

[[tool.poetry.source]]
name = "cacko"
secondary = true
url = "https://pypi.cacko.net/simple/"

[tool.poetry.dependencies]
python = "^3.10"
dataclasses-json = "^0.5.6"
toml = "^0.10.2"
Unidecode = "^1.3.3"
bottle = "^0.12.21"
pyotp = "^2.6.0"
cachable = "^0.3.7"
pyowm = "^3.3.0"
pandas = "^1.4.3"
APScheduler = "^3.9.1"

[tool.poetry.dev-dependencies]
pydebug = "^1.0.3"
flake8 = "^4.0.1"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
