[tool.poetry]
name = "tick"
version = "0.1.0"
description = ""
authors = ["cacko <alex@cacko.net>"]

[[tool.poetry.source]]
name = "cacko"
secondary = true
url = "https://pypi.cacko.net/simple/"

[tool.poetry.dependencies]
python = "^3.10"
Unidecode = "^1.3.4"
bottle = "^0.12.23"
pyotp = "^2.6.0"
pandas = "^1.4.3"
APScheduler = "^3.9.1"
cachable = "^0.3.10"
PyYAML = "^6.0"
requests-toolbelt = "^0.9.1"
stringcase = "^1.2.0"
dataclasses-json = "^0.5.7"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
